--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -7,7 +7,7 @@
   <%= label(:message, 'Viber') %>
   <%= check_box_tag('message[messanger][]', :viber) %><br>
   <%= label(:message, 'WatsApp') %>
-  <%= check_box_tag('message[messanger][]', :watsapp) %><br>
+  <%= check_box_tag('message[messanger][]', :whatsapp) %><br>
   <%= label(:message, 'Сообщение') %>
   <%= text_field(:message, :body) %><br>
   <%= label(:message, 'Получатель1') %>
